# compiler-research

./: .gitignore  Cargo.toml  README.md  make  memory.x  readme.md  test.pp
compiler/: Dockerfile  container  cus.patch  fpc.cfg  free_pascal.patch  stm32_unit.patch
examples/: button-interrupt.rs  button-rtic.rs  button-simple.rs  eink.rs  gpio_hal_blinky.rs  i2c-tpa2016.rs  lcd.rs  segment-display.rs  timer-blinky.rs
free-pascal/: make
free-pascal-arm/: make
free-pascal-arm/compiler/: free_pascal.patch
free-pascal-arm/src/tests/: unit1.pp
free-pascal/compiler/: Dockerfile  container
free-pascal/src/stm32/: cortexm4f_start.inc
free-pascal/src/tests/: blinky.pp  unit2.pp  unit3.pp
gcc/: LICENSE  Makefile
gcc-arm/: main.c  readme.md
gcc/toolchain/: Dockerfile
pascal-test/: cortexm4f_start.inc  test.pp
rust/: LICENSE-0BSD.txt  README.md
rust-arm/examples/: button-interrupt.rs  button-rtic.rs  gpio-hal-blinky.rs
rust/.cargo/: config
rust/examples/: serial_echo.rs  timer-blinky.rs
rust/src/: led.rs
src/: button.rs  led.rs  startup.pas  test.pp
src/stm32/: constRcc.pp  cortexm4f_start.inc  stm32f401xx.pp
test/: Dockerfile  container
toolchain/: container
